@@ -1,0 +1,61 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cscope/Attic/cscope-15.7a.ebuild,v 1.1 2009/05/02 10:01:04 ulm Exp $
+
+inherit elisp-common eutils
+
+DESCRIPTION="Interactively examine a C program"
+HOMEPAGE="http://cscope.sourceforge.net/"
+SRC_URI="mirror://sourceforge/cscope/${P}.tar.bz2"
+
+LICENSE="BSD GPL-2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~sparc-fbsd ~x86 ~x86-fbsd"
+IUSE="emacs"
+
+RDEPEND=">=sys-libs/ncurses-5.2"
+DEPEND="${RDEPEND}
+	sys-devel/flex
+	sys-devel/bison
+	>=sys-devel/autoconf-2.60
+	emacs? ( virtual/emacs )"
+
+SITEFILE="50${PN}-gentoo.el"
+
+src_compile() {
+	STRIP="no"
+
+	econf || die "econf failed"
+	make clean || die "make clean failed"
+	emake || die "emake failed"
+
+	if use emacs ; then
+		cd "${S}"/contrib/xcscope || die
+		elisp-compile *.el || die
+	fi
+}
+
+src_install() {
+	einstall || die "einstall failed"
+	dodoc AUTHORS ChangeLog NEWS README* TODO || die "dodoc failed"
+
+	if use emacs ; then
+		cd "${S}"/contrib/xcscope || die
+		elisp-install ${PN} *.el *.elc || die
+		elisp-site-file-install "${FILESDIR}/${SITEFILE}" || die
+		dobin cscope-indexer || die "dobin failed"
+	fi
+
+	cd "${S}"/contrib/webcscope || die
+	docinto webcscope
+	dodoc INSTALL TODO cgi-lib.pl cscope hilite.c || die "dodoc failed"
+	insinto /usr/share/doc/${PF}/webcscope/icons; doins icons/*.gif
+}
+
+pkg_postinst() {
+	use emacs && elisp-site-regen
+}
+
+pkg_postrm() {
+	use emacs && elisp-site-regen
+}
